--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <span>Landing page for a Cafe Menu, this is more focused on improving my CSS skills.<span><a href="https://github.com/SMSN-88/Cafe"> Source code</a></span></span>    
 </li>
 <li class="card">
-    <div class="img"><a href="https://app.netlify.com/sites/incandescent-cannoli-8b1673/overview"><img src="images/timezone.png" alt="img" draggable="false"></a></div>
+    <div class="img"><a href="https://24hr-timezone.netlify.app/"><img src="images/timezone.png" alt="img" draggable="false"></a></div>
 <h2>24hr Digital Clock</h2>
 <span>Yes! Another digital clock, but this one just looks cooler and it has different timezone settings<span><a href="https://github.com/SMSN-88/DigitalClock"> Source code</a></span></span>        
 </li>
