--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="tooltip"><a href="mailto:samson.codes88@gmail.com"><i class="ri-mail-send-line"></i></a><span class="tooltiptext">Email</span></div>
             </div>
             
-            <a href="#about" class="btn">About Me</a>
+           <!-- <a href="#about" class="btn">About Me</a> -->
     </div>
 </section>
 
@@ -88,7 +88,7 @@
         </p>
         <p class="exp">
             Core Skills:
-            <span>HTML, CSS, JavaScript, C#, Blazor, GitHub</span> 
+            <span>HTML, CSS, JavaScript, React, C#, Blazor, GitHub</span> 
         </p>
         <p class="exp">
             Work Experience:
