--- a/index.html
+++ b/index.html
@@ -53,13 +53,11 @@
 <section class="hero" id="home">
     <div class="main-content">
         <h1>I'm <span>Samson Ayinde</span></h1> 
-        <p>Greetings! I'm Samson, a self-taught Front End Web Developer. 
-            Having made the transition from an Accounts Assistant to currently working as a Junior Software Developer has been a transformative journey fueled by my passion for front-end development. 
-            My fascination with creating intuitive and visually appealing user experiences inspired me to pivot my career and immerse myself in the world of coding. 
-            As I continue to hone my skills, being exposed to new tech stacks, I aspire to advance to a Senior Developer role where I can lead projects, innovate, and mentor aspiring developers. 
-            My goal is to share my knowledge and experiences, guiding the next generation of developers and contributing to the dynamic tech community.            
-            Just as I am committed to perfecting my coding skills, I am also dedicated to my other true loves: Liverpool FC & The Gym.  
-            With a passion for Technology, Sport & Fitness, I bring a unique blend of skills, dedication, and an unwavering spirit to every project I undertake.</p>
+        <p>Welcome!
+I’m Samson Ayinde, a Junior Software Developer with hands-on experience in frontend and backend development. Currently, I work at Timeslice, using technologies like Blazor, C#, and .NET Core and SQL database, to deliver intuitive and impactful software solutions.
+With a strong foundation in HTML, CSS, JavaScript, and React, I specialize in creating seamless user experiences and scalable backend systems. My career transition from Accounts Assistant to software development reflects my dedication to continuous learning and problem-solving.
+I am passionate about leveraging modern technologies and best practices to drive innovation. My aspiration is to grow into a Senior Developer role where I can lead projects, mentor aspiring developers, and contribute to impactful solutions within the tech community.
+Outside of coding, I channel my commitment and focus into fitness and sports, bringing the same energy and discipline to every project I undertake. Let’s create something remarkable together!</p>
             
 
             <div class="social">
@@ -88,7 +86,14 @@
         </p>
         <p class="exp">
             Core Skills:
-            <span>HTML, CSS, JavaScript, React, C#, Blazor, GitHub</span> 
+            <span>FRONTEND SKILLS: HTML5 & CSS3: Expertise in building responsive and accessible user interfaces.
+            <br> JavaScript: Proficient in ES6+ syntax and features, including event handling and DOM manipulation.
+            <br> React: Experience with component-based architecture, state management, lifecycle methods, and Hooks for functional components.
+            <br>BACKEND SKILLS: C# & .NET Core: Building scalable backend services, API development, and business logic implementation.
+            <br>Blazor: Leveraging Blazor for building interactive, client-side web applications.
+            <br>SQL: Database management, query optimization, and integration with backend services using Entity Framework.
+            <br>DEV OPS:Version Control: Proficient with Git and GitHub for collaborative development and code versioning.
+            </span> 
         </p>
         <p class="exp">
             Work Experience:
