--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ Outside of coding, I channel my commitment and focus into fitness and sports, br
         </p>
         <p class="exp">
             Core Skills:
-            <span>FRONTEND SKILLS:</span> HTML5 & CSS3: Expertise in building responsive and accessible user interfaces.
-            <br> -JavaScript: Proficient in ES6+ syntax and features, including event handling and DOM manipulation.
-            <br> -React: Experience with component-based architecture, state management, lifecycle methods, and Hooks for functional components.
-            <br><span>BACKEND SKILLS:</span> C# & .NET Core: Building scalable backend services, API development, and business logic implementation.
-            <br>-Blazor: Leveraging Blazor for building interactive, client-side web applications.
-            <br>-SQL: Database management, query optimization, and integration with backend services using Entity Framework.
-            <br><span>DEV OPS:</span>Version Control: Proficient with Git and GitHub for collaborative development and code versioning.
+            <span>FRONTEND SKILLS:</span> HTML5 & CSS3: <span>Expertise in building responsive and accessible user interfaces.</span>
+            <br> -JavaScript: <span>Proficient in ES6+ syntax and features, including event handling and DOM manipulation.</span>
+            <br> -React: <span>Experience with component-based architecture, state management, lifecycle methods, and Hooks for functional components.</span>
+            <br><span>BACKEND SKILLS:</span> C# & .NET Core: <span>Building scalable backend services, API development, and business logic implementation.</span>
+            <br>-Blazor: <span>Leveraging Blazor for building interactive, client-side web applications.</span>
+            <br>-SQL: <span>Database management, query optimization, and integration with backend services using Entity Framework.</span>
+            <br><span>DEV OPS:</span>Version Control: <span>Proficient with Git and GitHub for collaborative development and code versioning.</span>
             </span> 
         </p>
         <p class="exp">
