--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ Outside of coding, I channel my commitment and focus into fitness and sports, br
         <p class="exp">
             Core Skills:
             <span>FRONTEND SKILLS:</span> HTML5 & CSS3, JavaScript & React
-            <br><span>Expertise in building responsive and accessible user interfaces, Proficient in ES6+ syntax and features, including event handling and DOM manipulation & Experience with component-based architecture, state management, lifecycle methods, and Hooks for functional components</span>
+            <br><span>Experience in building responsive and accessible user interfaces, Proficient in ES6+ syntax and features, including event handling and DOM manipulation & Experience with component-based architecture, state management, lifecycle methods, and Hooks for functional components.</span>
             <br>BACKEND <span>SKILLS:</span> C# & .NET Core, Blazor & SQL            
             <br><span>Building scalable backend services, API development, and business logic implementation, Leveraging Blazor for building interactive, client-side web applications & Database management, query optimization, and integration with backend services using Entity Framework. </span>
-            <br>DEV <span>OPS:</span><br>Version Control: <span>Proficient with Git and GitHub for collaborative development and code versioning.</span>
+            <br>DEV <span>OPS:</span>Version Control: <span>Proficient with Git and GitHub for collaborative development and code versioning.</span>
             </span> 
         </p>
         <p class="exp">
