--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Outside of coding, I channel my commitment and focus into fitness and sports, br
         <p class="exp">
             Work Experience:
             <span>Junior Software Developer : 2023 - Presnet
-                <br> Freelance Web Developer : 2023 - Present
+                <br> Technology Support Administrator, : 2023 
                 <br> Accounts Assistant : 2014 - 2023
             </span> 
         </p>
