--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
      <li><a href="#home" data-text="Home">Home</a></li>
      <li><a href="aboutme.html" data-text="About Me">About Me</a></li>
      <li><a href="projects.html" data-text="Projects">Projects</a></li>
-     <li><a href="mailto:samson.codes88@gmail.com" data-text="Contact">Contact</a></li>
+     <li><a href="mailto:samson.codes88@gmail.com" method="post" data-text="Contact">Contact</a></li>
     </ul>
 
     <!-----Contact Me------->
-    <!-----
+ <!---  
 <div class="top-btnn">
-        <a href="mailto:samson.a@hotmail.co.uk" method="post" class="h-btn">Contact Me</a>
+        <a href="mailto:samson.codes88@gmail.com" method="post" class="h-btn">Contact Me</a>
         
     </div>
-    ------->
+    ---->
+   
 <!-----Contact Me------->
 
 </header>
