--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,7 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 <section class="about">
     <div class="about-img">
         <img src="images/Me2.jpeg" alt="Samson Ayinde">
-        <main class="slider">   
+       <!--- <main class="slider">   
             <div class="wrapper2">
                 <i id="left" class="fa-solid fa-angle-left"></i>
                 <ul class="carousel">
@@ -63,7 +63,7 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
                 </ul>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
-            </main>
+            </main>  --->
     </div>
     <div class="about-text" data-aos="zoom-in-up">
         <h2>About<span> Me  </h2>
