--- a/aboutme.html
+++ b/aboutme.html
@@ -97,6 +97,8 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
             <a href="mailto:samson.codes88@gmail.com" class="btn">Message me via Email</a>
             <a href="https://drive.google.com/uc?export=download&id=1TDm9Bxq_ZNJTEQY5nXkNsQn08M1hR8ZZ" download="YourCV.pdf" class="btn btn2">Download My CV</a>
             <a href="projects.html" class="btn">Projects</a>
+            <a href="https://buymeacoffee.com/samson88" class="btn btn2">Buy Me A Coffee</a>
+  
         </div>
     </div>
 
