--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,11 @@
             <div class="wrapper">
                 <i id="left" class="fa-solid fa-angle-left"></i>
                 <ul class="carousel">
+                                  <li class="card">
+        <div class="img"><a href="https://blazorprojectapp.netlify.app/"><img src="images/BlazorApp.png" alt="img" draggable="false"></a></div>
+    <h2>Mini Blazor Apps</h2>
+    <span>Three mini C# projects built using Blazor WASM, 1)Notes App, 2) Budget Tracker & 3) Habit Tracker.<span><a href="https://github.com/SMSN-88/BlazorProjectApp"> Source code</a></span></span>                    
+    </li>
                     <li class="card">
                         <div class="img"><a href="https://smsn-sportstore.netlify.app"><img src="images/sport.png" alt="img" draggable="false"></a></div>
                     <h2>SMSN Sports Store</h2>
@@ -91,7 +96,7 @@
         <div class="img"><a href="https://24hr-timezone.netlify.app/"><img src="images/timezone.png" alt="img" draggable="false"></a></div>
     <h2>24hr Digital Clock</h2>
     <span>Yes! Another digital clock, but this one just looks cooler and it has different timezone settings<span><a href="https://github.com/SMSN-88/DigitalClock"> Source code</a></span></span>        
-    </li>
+    </li>      
                 </ul>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
@@ -119,3 +124,4 @@
     </script>
 </body>
 </html>
+
