--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
     <div class="center-text">
         <h2 class="proj">My <span>Projects</span></h2>
         <p class="projects-text">
-            They say you can tell alot about a developer by the projects they build, well here are some of the few projectes I've worked on. <br/> All projects are built using <span>HTML</span>/CSS & Vanilla <span>JavaScript</span>. 
+            They say you can tell alot about a developer by the projects they build, well here are some of the few projectes I've worked on. <br/> My projects are built using C#, <span>HTML</span>/CSS & Vanilla <span>JavaScript</span>. 
             As I continue to learn and build new projects, I'll be adding more in due course, but for now, have fun and enjoy exploring.
             
             </p>
@@ -124,4 +124,5 @@
     </script>
 </body>
 </html>
+
 
