--- a/projects.html
+++ b/projects.html
@@ -83,9 +83,9 @@
     <span>Calculate your age down to the day.<span><a href="https://github.com/SMSN-88/Age-Calculator"> Source code</a></span></span>                
     </li>
     <li class="card">
-        <div class="img"><a href="https://meetmedating.netlify.app"><img src="images/MEET.png" alt="img" draggable="false"></a></div>
-    <h2>Meet Me</h2>
-    <span>Landing page for a dating site, with login features.<span><a href="https://github.com/SMSN-88/DatingSite"> Source code</a></span></span>                    
+        <div class="img"><img src="images/MEET.png" alt="img" draggable="false"></a></div>
+    <h2>Random Bible Verse Generator</h2>
+    <span>Blazor project, random Bible Verse generator using C# & .Net 8.<span><a href="https://github.com/SMSN-88/BibleVerseApp.git"> Source code</a></span></span>                    
     </li>
     <li class="card">
         <div class="img"><a href="https://smsncafe.netlify.app"><img src="images/cafe.jpeg" alt="img" draggable="false"></a></div>
@@ -124,5 +124,6 @@
     </script>
 </body>
 </html>
+
 
 
