--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,11 @@
     <span>Three mini C# projects built using Blazor WASM, 1)Notes App, 2) Budget Tracker & 3) Habit Tracker.<span><a href="https://github.com/SMSN-88/BlazorProjectApp"> Source code</a></span></span>                    
     </li>
                     <li class="card">
+        <div class="img"><img src="images/bibleverse.png" alt="img" draggable="false"></a></div>
+    <h2>Random Bible Verse Generator</h2>
+    <span>Blazor project, random Bible Verse generator using C# & .Net 8.<span><a href="https://github.com/SMSN-88/BibleVerseApp.git"> Source code</a></span></span>                    
+    </li>
+                    <li class="card">
                         <div class="img"><a href="https://smsn-sportstore.netlify.app"><img src="images/sport.png" alt="img" draggable="false"></a></div>
                     <h2>SMSN Sports Store</h2>
                 <span>E-Commerce Website selling the best quality Football Jersey's. <span><a href="https://github.com/SMSN-88/SPORTSTORE">Source code</a></span></span>    
@@ -81,12 +86,7 @@
         <div class="img"><a href="https://youragecal.netlify.app"><img src="images/AgeCalc.png" alt="img" draggable="false"></a></div>
     <h2>Age Calculator</h2>
     <span>Calculate your age down to the day.<span><a href="https://github.com/SMSN-88/Age-Calculator"> Source code</a></span></span>                
-    </li>
-    <li class="card">
-        <div class="img"><img src="images/MEET.png" alt="img" draggable="false"></a></div>
-    <h2>Random Bible Verse Generator</h2>
-    <span>Blazor project, random Bible Verse generator using C# & .Net 8.<span><a href="https://github.com/SMSN-88/BibleVerseApp.git"> Source code</a></span></span>                    
-    </li>
+    </li>    
     <li class="card">
         <div class="img"><a href="https://smsncafe.netlify.app"><img src="images/cafe.jpeg" alt="img" draggable="false"></a></div>
     <h2>SMSN Cafe</h2>
@@ -124,6 +124,7 @@
     </script>
 </body>
 </html>
+
 
 
 
