--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
         <h2 class="proj">My <span>Projects</span></h2>
         <p class="projects-text">
             They say you can tell alot about a developer by the projects they build, well here are some of the few projectes I've worked on. <br/> My projects are built using C#, <span>HTML</span>/CSS & Vanilla <span>JavaScript</span>. 
-            As I continue to learn and build new projects, I'll be adding more in due course, but for now, have fun and enjoy exploring.
+            As I continue to learn and build new projects, I'll be adding more in due course, but for now, have fun and enjoy exploring. Click on the picture to view the project live or click on the source code link provided at the bottom of the descriptions.
             
             </p>
     </div>
@@ -54,13 +54,13 @@
                 <ul class="carousel">
                                   <li class="card">
         <div class="img"><a href="https://blazorprojectapp.netlify.app/"><img src="images/BlazorApp.png" alt="img" draggable="false"></a></div>
-    <h2>Mini Blazor Apps</h2>
+    <h2>Mini Blazor Apps(WASM)</h2>
     <span>Three mini C# projects built using Blazor WASM, 1)Notes App, 2) Budget Tracker & 3) Habit Tracker.<span><a href="https://github.com/SMSN-88/BlazorProjectApp"> Source code</a></span></span>                    
     </li>
                     <li class="card">
         <div class="img"><img src="images/bibleverse.png" alt="img" draggable="false"></a></div>
-    <h2>Random Bible Verse Generator</h2>
-    <span>Blazor Server project, that fetches and displays random Bible verses using the Bolls.life API with a mobile-inspired UI.<span><a href="https://github.com/SMSN-88/BibleVerseApp.git"> Source code</a></span></span>                    
+    <h2>Random Bible Verse Generator(Server)</h2>
+    <span>Blazor Server project, that fetches and displays random Bible verses using the Bolls.life API with a mobile-inspired UI.<span><a href="https://github.com/SMSN-88/BibleVerseApp.git"> Source code</a>ONLY</span></span>                    
     </li>
                     <li class="card">
                         <div class="img"><a href="https://smsn-sportstore.netlify.app"><img src="images/sport.png" alt="img" draggable="false"></a></div>
@@ -124,6 +124,7 @@
     </script>
 </body>
 </html>
+
 
 
 
