--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
                     <li class="card">
         <div class="img"><img src="images/bibleverse.png" alt="img" draggable="false"></a></div>
     <h2>Random Bible Verse Generator(Server)</h2>
-    <span>Blazor Server project, that fetches and displays random Bible verses using the Bolls.life API with a mobile-inspired UI.<span><a href="https://github.com/SMSN-88/BibleVerseApp.git"> Source code</a>ONLY</span></span>                    
+    <span>Blazor Server project, that fetches and displays random Bible verses using API with a mobile-inspired UI.<span><a href="https://github.com/SMSN-88/BibleVerseApp.git"> Source code</a>ONLY</span></span>                    
     </li>
                     <li class="card">
                         <div class="img"><a href="https://smsn-sportstore.netlify.app"><img src="images/sport.png" alt="img" draggable="false"></a></div>
@@ -124,6 +124,7 @@
     </script>
 </body>
 </html>
+
 
 
 
