--- a/projects.html
+++ b/projects.html
@@ -106,11 +106,11 @@
 
     </section>
 
-        <div class="footer">
+      <!-- <div class="footer">
         <div class="copyright">
             <p>2025 Portfolio <span>Samson Ayinde</span></p>
         </div>
-    </div>
+    </div> -->
     <!-- js link -->
     <script  src="script.js"></script>
     
@@ -124,6 +124,7 @@
     </script>
 </body>
 </html>
+
 
 
 
