--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,11 @@
     <span>Blazor Server project, that fetches and displays random Bible verses using API with a mobile-inspired UI.<span><a href="https://github.com/SMSN-88/BibleVerseApp.git"> Source code</a>ONLY</span></span>                    
     </li>
                     <li class="card">
+                    <div class="img"><a href="https://smsn-88.github.io/spotify-demo/"><img src="images/Spotify.png" alt="img" draggable="false"></a></div>
+                <h2>Spotify-style Demo — Conversion Experiment</h2>
+            <span>I designed this Spotify Clone with conversion optimization in mind. For example, I tested CTA color and placement to see impact on clicks..<span><a href="https://github.com/SMSN-88/spotify-demo"> Source code</a></span></span>        
+            </li>
+                    <li class="card">
                         <div class="img"><a href="https://smsn-sportstore.netlify.app"><img src="images/sport.png" alt="img" draggable="false"></a></div>
                     <h2>SMSN Sports Store</h2>
                 <span>E-Commerce Website selling the best quality Football Jersey's. <span><a href="https://github.com/SMSN-88/SPORTSTORE">Source code</a></span></span>    
@@ -124,6 +129,7 @@
     </script>
 </body>
 </html>
+
 
 
 
