--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
     </li>
                     <li class="card">
                     <div class="img"><a href="https://smsn-88.github.io/spotify-demo/"><img src="images/Spotify.png" alt="img" draggable="false"></a></div>
-                <h2>Spotify-style Demo — Conversion Experiment</h2>
+                <h2>Spotify-style Demo</h2>
             <span>I designed this Spotify Clone with conversion optimization in mind. For example, I tested CTA color and placement to see impact on clicks..<span><a href="https://github.com/SMSN-88/spotify-demo"> Source code</a></span></span>        
             </li>
                     <li class="card">
@@ -129,6 +129,7 @@
     </script>
 </body>
 </html>
+
 
 
 
